tests/snapshots/execution_spec__test-params-as-body.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(graphiql: true, port: 8000) @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  firstUser(id: Int, name: String): User @http(body: "{{.args}}", method: "POST", path: "/users")
}

type User {
  id: Int
  name: String
}
