tests/snapshots/execution_spec__test-params-as-body.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "firstUser": {
        "id": 1,
        "name": "foo"
      }
    }
  }
}
