tests/snapshots/execution_spec__test-query-documentation.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  """
  This is test
  """
  foo: String
}

scalar Url

schema {
  query: Query
}
