tests/snapshots/execution_spec__test-query.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  foo: String
}

scalar Url

schema {
  query: Query
}
