tests/snapshots/execution_spec__test-response-header-merge.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(headers: {custom: [{key: "a", value: "a"}, {key: "a", value: "b"}]}) @upstream {
  query: Query
}

type Query {
  user: User @expr(body: {name: "John"})
}

type User {
  age: Int
  name: String
}
