tests/snapshots/execution_spec__test-response-headers-multi.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of failed to parse header value",
    "trace": [
      "schema",
      "@server",
      "headers",
      "custom"
    ],
    "description": null
  },
  {
    "message": "Parsing failed because of invalid HTTP header name",
    "trace": [
      "schema",
      "@server",
      "headers",
      "custom"
    ],
    "description": null
  }
]
