tests/snapshots/execution_spec__test-response-headers-name.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of invalid HTTP header name",
    "trace": [
      "schema",
      "@server",
      "responseHeaders"
    ],
    "description": null
  }
]
