tests/snapshots/execution_spec__test-rest-api-args.md_assert_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "id": 2,
        "name": "bar",
        "address": {
          "street": "Kulas Dark"
        }
      }
    }
  }
}
